--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,15 +1,15 @@
-{{#if success_msg}}
+{{#each success_msg}}
 <div class="alert alert-success" role="alert">
-    {{success_msg}}
+    {{this}}
 </div>
-{{/if}}
+{{/each}}
 
 
-{{#if error_msg}}
+{{#each error_msg}}
 <div class="alert alert-danger" role="alert">
-    {{error_msg}}
+    {{this}}
 </div>
-{{/if}}
+{{/each}}
 
 {{#if error}}
 <div class="alert alert-danger" role="alert">
