--- a/views/teacher/score.hbs
+++ b/views/teacher/score.hbs
@@ -10,26 +10,37 @@
 
         </div>
     </div>
+
     <div class="col-md-6" style="text-align:end">
         <div class="semester ml-2 mb-2">
+
             <p class="labelSemester">GVCN: {{managerClassName}}</p>
+
         </div>
+        <div class="semester ml-2 mb-2">
+            <a class="labelSemester fa fa-pencil-square-o" href="#" data-toggle="modal" data-target="#importFileExcel"
+                aria-hidden="true"> Nhập
+                file</a>
+        </div>
+
     </div>
 </div>
+
+
 <div class="card shadow mb-4 row">
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered" id="" width="100%" cellspacing="0"
-                style="font-size: 14px; color: black">
+                style="font-size: 12px; color: black">
                 <thead>
                     <tr>
                         <th>STT</th>
-                        <th>MÃ HỌC SINH</th>
+                        <th>MÃ HS</th>
                         <th>HỌ TÊN</th>
-                        <th>CỘT 1</th>
-                        <th>CỘT 2</th>
-                        <th>CỘT 3</th>
-                        <th>CỘT 4</th>
+                        <th>5'</th>
+                        <th>15'</th>
+                        <th>60'</th>
+                        <th>THI CK</th>
                         <th>TB</th>
                         <th>SỬA</th>
                     </tr>
@@ -45,8 +56,8 @@
                         <td style="width: 10%; text-align:end">{{score3}}</td>
                         <td style="width: 10%; text-align:end">{{score4}}</td>
                         <td style="width: 10%; text-align:end">{{gpa}}</td>
-                        <td style="width: 10%; text-align:center"><i class="fa fa-pencil-square-o" data-toggle="modal"
-                                data-target="#{{dataTarget}}" aria-hidden="true"></i></td>
+                        <td style="width: 10%; text-align:center"><a href="#" class="fa fa-pencil-square-o"
+                                data-toggle="modal" data-target="#{{dataTarget}}" aria-hidden="true"></a></td>
                     </tr>
                 </tbody>
                 {{/each}}
@@ -107,3 +118,44 @@
     </div>
 </div>
 {{/each}}
+
+<div class="modal fade" id="importFileExcel" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <form class="modal-content" action="{{actionFormExcel}}" method="POST" enctype="multipart/form-data">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Sửa điểm bằng file excel</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentID">Lớp</label>
+                    <input type="text" id="defaultForm-studentID" class="form-control validate" value="{{className}}"
+                        readonly>
+                </div>
+
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-studentName">Mã lớp</label>
+                    <input class="form-control validate" type="text" id="defaultForm-studentName" name="classID"
+                        value="{{classID}}" readonly>
+                </div>
+                <div class="md-form mb-2 form-inline">
+                    <label data-error="wrong" data-success="right" for="defaultForm-score1">GVCN</label>
+                    <input type="text" id="defaultForm-score1" class="form-control validate"
+                        value="{{managerClassName}}" readonly>
+                </div>
+                <div class="md-form mb-2" style="text-align: center;">
+                    <label style="cursor: pointer;" for="upload-file-excel">Tải file lên</label>
+                    <input style="border-radius: 5px; padding: 5px; background-color:orange" name="fileExcel"
+                        id="upload-file-excel" type="file" required />
+                </div>
+
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button class="btn btn-danger" type="submit">Xác nhận</button>
+            </div>
+        </form>
+    </div>
+</div>
