--- a/views/teacher/score.hbs
+++ b/views/teacher/score.hbs
@@ -28,7 +28,7 @@
 
 
 <div class="card shadow mb-4 row">
-    <div class="card-body">
+    <div class="card-body col">
         <div class="table-responsive">
             <table class="table table-bordered" id="" width="100%" cellspacing="0"
                 style="font-size: 12px; color: black">
