get ResultView Student

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -117,6 +117,8 @@
   {{!-- script schedule --}}
   <script src="../../js/util.js"></script> <!-- util functions included in the CodyHouse framework -->
   <script src="../../js/main.js"></script>
+  {{!-- custom scripts for datatable --}}
+  <script src="../../js/datatable.js"></script>
 </body>
 
 </html>
