--- a/views/teacher/managerClass.hbs
+++ b/views/teacher/managerClass.hbs
@@ -12,8 +12,7 @@
 <div class="card shadow mb-4 row">
     <div class="card-body">
         <div class="table-responsive">
-            <table class="table table-bordered" id="" width="100%" cellspacing="0"
-                style="font-size: 12px; color: black">
+            <table class="table table-bordered" id="" width="100%" cellspacing="0">
                 <thead>
                     <tr>
                         <th>STT</th>
