--- a/views/teacher/class.hbs
+++ b/views/teacher/class.hbs
@@ -1,9 +1,8 @@
 <div class="row">
-
     <form class="semester labelSemester ml-2 mb-2" action="/teacher/class" method="GET">
         <span align="center">
             <span>Năm học:</span>
-            <select class="semester" style="border: none; color:blanchedalmond" name="year"
+            <select class="semester" style="border: none; color:blanchedalmond; cursor:pointer;" name="year"
                 onchange="this.form.submit();">
                 {{#each allYearSemester}}
                 {{#if this}}
@@ -14,7 +13,7 @@
         </span>
         <span align="center">
             <span>Học kì:</span>
-            <select class="semester" style="border: none; color:blanchedalmond" name="semester"
+            <select class="semester" style="border: none; color:blanchedalmond; cursor:pointer;" name="semester"
                 onchange="this.form.submit();">
                 {{#if isLastSemester}}
                 <option value="2">2</option>
